--- a/index.html
+++ b/index.html
@@ -131,9 +131,15 @@
      <div class="large-4 columns journ"><br></div>
     </div>
     <div class="row content">
-    <div class="large-4 columns ">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley </div>
-     <div class="large-4 columns">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley </div>
-     <div class="large-4 columns">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley </div>
+    <div class="large-4 columns ">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+        <a class="expanded button" href="#">EXPLORE MORE</a>
+        </div>
+     <div class="large-4 columns">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+        <a class="expanded button" href="#">EXPLORE MORE</a>
+        </div>
+     <div class="large-4 columns">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+        <a class="expanded button" href="#">EXPLORE MORE</a>
+        </div>
     </div>
 
     <script src="js/vendor/jquery.js"></script>
