--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </div>
      <div class="large-4 columns journ"><br></div>
      <div class="large-4 columns journ"><br></div>
-    </div>
+ </div>
     <div class="row content">
 
      <div class="large-4 columns">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
@@ -139,8 +139,14 @@
      <div class="large-4 columns">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
         <button class="secondary hollow button" href="#">EXPLORE MORE</button>
         </div>
+        <div class="large-4 columns">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+        <button class="secondary hollow button" href="#">EXPLORE MORE</button>
+        </div>
     </div>
     <div class="row show">SHOW MORE ARTICLES </div>
+    <div class="row blackrow">
+    </div>
+
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
