--- a/index.html
+++ b/index.html
@@ -10,32 +10,33 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css">
   </head>
   <body>
+
     <div class="expanded row banner">
-      <div class="large-12 columns">
-          <div class="large-1 colums">
-              <img src="assets/logo.png">
-          </div>
-          <div class="large-10 columns header">
-              <ul>
-                  <li><a href="#"></a>Home</li>
-                  <li><a href="#"></a>Our Work</li>
-                  <li><a href="#"></a>About</li>
-                  <li><a href="#"></a>Services</li>
-                  <li><a href="#"></a>Blog</li>
-                  <li><a href="#"></a>Get in Touch</li>
-              </ul>
-          </div>
-         <div class="large-1 columns"> <div class="large-2 columns social">
-             <i class="fa fa-facebook" aria-hidden="true"></i>
-          </div>
-          <div class="large-2 columns social">
-              <i class="fa fa-google-plus" aria-hidden="true"></i></div>
-               <div class="large-2 columns social"><i class="fa fa-twitter" aria-hidden="true"></i></div></div>
-      </div>
+
+                 <div class="large-1 colums">
+                              <img src="assets/logo.png" alt="logo" >
+                          </div>
+                          <div class="large-10 columns header">
+                              <ul>
+                                  <li><a href="#"></a>Home</li>
+                                  <li><a href="#"></a>Our Work</li>
+                                  <li><a href="#"></a>About</li>
+                                  <li><a href="#"></a>Services</li>
+                                  <li><a href="#"></a>Blog</li>
+                                  <li><a href="#"></a>Get in Touch</li>
+                              </ul>
+                          </div>
+                         <div class="large-1 columns">
+                             <i class="fa fa-facebook" aria-hidden="true"></i>
+
+                              <i class="fa fa-google-plus" aria-hidden="true"></i>
+                               <i class="fa fa-twitter" aria-hidden="true"></i></div>
+
         <div class="large-8 columns"><h1>WE BUILD WEBSITES AND APPS THAT PEOLE LOVE</h1><br>
             Full suite service in the ares of website development, web-based enterprise solutions, corporate ientity and advertisement.
         </div>
     </div>
+
       <div class="expanded row row1">
 
               <div class="large-6 columns left">
