--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Sage</title>
+    <link rel="stylesheet" href="foundation.css">
     <link rel="stylesheet" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Economica|Jura|Tero' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -50,29 +51,32 @@
                 </div>
             </div>
 
-            <div id="row-2">
+            <div id="row-2" class="row">
                 <div class="small-12 columns">
-                    <div class="small-6 columns">
+                    <div class="row">
+                        <div class="small-6 columns">
 
-                        <div id="highlighted-left">
-                            <div class="row" id="projects">
-                                <p>Current site section contains general information about
-                                    <br> our latest projects. We are focusing on website and mobile
-                                    <br>development, UI/UX nad branding</p>
-                                <h2>HIGHLIGHTED PROJECTS</h2>
-                            </div>
-                            <div class="row" id="blank">
-                                <div class="small-2 columns" id="gray1">
+                            <div id="highlighted-left">
+                                <div class="row" id="projects">
+                                    <p>Current site section contains general information about
+                                        <br> our latest projects. We are focusing on website and mobile
+                                        <br>development, UI/UX nad branding</p>
+                                    <h2>HIGHLIGHTED PROJECTS</h2>
+                                </div>
 
+                                <div class="row">
+                                    <div class="large-12 columns" id="blank">
+                                        <div class="small-4 large-3 column" id="gray1">
 
-                                    <div class="small-2 columns small-centered" id="gray2">
-
-
-
-                                        <div class="small-2 columns" id="grey1">
                                         </div>
-                                    </div>
 
+                                        <div class="large-3 column" id="gray2">
+                                        </div>
+
+                                        <div class="small-4 large-2 column" id="grey1">
+                                        </div>
+
+                                    </div>
                                 </div>
                                 <div class="row">
                                     <div id="discover">
@@ -83,71 +87,73 @@
                             </div>
                         </div>
                     </div>
-                    <div class="small-6 columns">
-                        <div id="highlighted-right">
-                            <div id="text">
-                                <h2>FEATURED</h2>
-                                <h1>I N F I N I T Y   S P A C E S </h1>
-                                <p>
-                                    Our self-initiated project.
-                                    <br> Infinity is an abstract concept describing something without any limiit and is relevant in a number of fields.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
                 </div>
-                <div class="row-3">
-                    <div class="col-12">
-
-                        <div class="col col-6" id="history">
-                            <h2>OUR HISTORY</h2>
-                            <p>SAGE -- is the flexible muti-concept portfolio theme based on WordPress. Built by designers, creative agencies and studios.
-                                <br>
-                                <br> Multi-purpose appreviate it's Anti mega industry multi-purpose are brighter. Also longer successful classic deal etra vibrant first exclusive. And spaciou ultimate secure lasting clinically fli gigantic every outside.
-                                <br>
-                                <br> Genuine less effective stimulates effervescent jumbo mouthwatering hello class rich however expensive. EEasy Mothers can't try finest gentle spring admire dry. Quenches valuable tangy buy will your scape gron millions on op-top. Waxy included sharpest aroma recommended all can pleasure. However all-over hurry hit than how. Luscious magically colossial whopping it;s full-bodied lasting splash don't get more. Sure zippy on flaoured luscious spring only.
-                                <br>
-                                <br> Racy challenge listen bettre go light tasting aromatic thick. THink touch spring now jumbo secret deserve thank-you seeing out. Supreme luscious agree monster economical makes deliver tummy absorbent incredible can quick. Clean shine product sweet choosy need golden </p>
-
-                            <a href="#" class="button">Explore More</a>
+                <div class="small-6 columns">
+                    <div id="highlighted-right">
+                        <div id="text">
+                            <h2>FEATURED</h2>
+                            <h1>I N F I N I T Y   S P A C E S </h1>
+                            <p>
+                                Our self-initiated project.
+                                <br> Infinity is an abstract concept describing something without any limiit and is relevant in a number of fields.
+                            </p>
                         </div>
-                        <div class="col col-6" id="sage">
-                            <img src="assets/sageBlackBigLogo.png">
-                        </div>
-                    </div>
-                    <div class="images">
-                        <ul class=" large-block-grid-4">
-                            <li><img src="assets/2180.png"></li>
-                            <li><img src="assets/105870.png"></li>
-                            <li><img src="assets/mail.png"></li>
-                        </ul>
-
-                    </div>
-                </div>
-                <div class="row-4">
-                    <h3>Services</h3>
-                    <div class="col col-4">
-                        <ul>
-                            <li>
-                                <img src="assets/2180.png">
-                                <br> 2 1 8 0
-                                <br> Finished Projects
-                            </li>
-                            <li>
-                                <img src="assets/2180.png">
-                                <br> 2 1 8 0
-                                <br> Finished Projects
-                            </li>
-                            <li>
-                                <img src="assets/2180.png">
-                                <br> 2 1 8 0
-                                <br> Finished Projects
-                            </li>
-                        </ul>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="large-12 colums">
+
+                <div class="large-12" id="history">
+                    <h2>OUR HISTORY</h2>
+                    <p>SAGE -- is the flexible muti-concept portfolio theme based on WordPress. Built by designers, creative agencies and studios.
+                        <br>
+                        <br> Multi-purpose appreviate it's Anti mega industry multi-purpose are brighter. Also longer successful classic deal etra vibrant first exclusive. And spaciou ultimate secure lasting clinically fli gigantic every outside.
+                        <br>
+                        <br> Genuine less effective stimulates effervescent jumbo mouthwatering hello class rich however expensive. EEasy Mothers can't try finest gentle spring admire dry. Quenches valuable tangy buy will your scape gron millions on op-top. Waxy included sharpest aroma recommended all can pleasure. However all-over hurry hit than how. Luscious magically colossial whopping it;s full-bodied lasting splash don't get more. Sure zippy on flaoured luscious spring only.
+                        <br>
+                        <br> Racy challenge listen bettre go light tasting aromatic thick. THink touch spring now jumbo secret deserve thank-you seeing out. Supreme luscious agree monster economical makes deliver tummy absorbent incredible can quick. Clean shine product sweet choosy need golden </p>
+
+                    <a href="#" class="button">Explore More</a>
+                </div>
+                <div class="large-6 cols" id="sage">
+                    <img src="assets/sageBlackBigLogo.png">
+                </div>
+            </div>
+            <div class="images">
+                <ul class=" large-block-grid-4">
+                    <li><img src="assets/2180.png"></li>
+                    <li><img src="assets/105870.png"></li>
+                    <li><img src="assets/mail.png"></li>
+                </ul>
+
+            </div>
+        </div>
+        <div class="row row-4">
+            <h3>Services</h3>
+            <div class="large-4 columns">
+                <ul>
+                    <li>
+                        <img src="assets/2180.png">
+                        <br> 2 1 8 0
+                        <br> Finished Projects
+                    </li>
+                    <li>
+                        <img src="assets/2180.png">
+                        <br> 2 1 8 0
+                        <br> Finished Projects
+                    </li>
+                    <li>
+                        <img src="assets/2180.png">
+                        <br> 2 1 8 0
+                        <br> Finished Projects
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
